# pimpl

./: Cargo.toml
crates/cargo-pimpl/: Cargo.toml
crates/cargo-pimpl/src/: main.rs
crates/pimpl/: Cargo.toml
crates/pimpl-core/: Cargo.toml
crates/pimpl-core/src/: lib.rs
crates/pimpl-macros/: Cargo.toml
crates/pimpl-macros/src/: lib.rs
crates/pimpl/src/: lib.rs
src/: lib.rs
