[package]
name = "pimpl-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Procedural macros for the pimpl crate."

[lib]
proc-macro = true

[dependencies]
pimpl-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
